<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/label_sort_by"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        <Spinner
                android:id="@+id/sort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/label_date_from"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        <Button
                android:id="@+id/date_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/btn_date_from"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/label_date_to"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        <Button
                android:id="@+id/date_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/btn_date_to"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1">

            <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel"
                    android:textColor="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            <Button
                    android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_search"
                    android:textColor="@color/colorPrimary"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>